--- a/TodolistApp/src/index.html
+++ b/TodolistApp/src/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>A JavaScript project</h1>
-  <div id="app"></div>
+  <div id="app">Bubulekshmi</div>
   <script src="main.js"></script>
 </body>
 </html>
