--- a/TodolistApp/src/index.html
+++ b/TodolistApp/src/index.html
@@ -4,10 +4,19 @@
   <title>A JavaScript project</title>
   <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>A JavaScript project</h1>
-  <div id="app">Bubulekshmi</div>
-  <script src="main.js"></script>
+  <div class="container">
+    <div class="todo-app">
+        <h2>Todolist App <img src="Assets/icon.png" alt="This is a picture of a icon"></h2>
+        <div class="row">
+          <input type="text" id="input-box"  placeholder="Add your Text">
+          <button>Add</button>
+        </div>
+    </div>
+  </div>
 </body>
 </html>
