--- a/TodolistApp/src/index.html
+++ b/TodolistApp/src/index.html
@@ -14,8 +14,14 @@
         <h2>Todolist App <img src="Assets/icon.png" alt="This is a picture of a icon"></h2>
         <div class="row">
           <input type="text" id="input-box"  placeholder="Add your Text">
-          <button>Add</button>
+          <button onclick="AddTask()">Add</button>
         </div>
+        <ul id="list-container">
+          <!-- <li class="checked">task 1</li>
+          <li>task 2</li>
+          <li>task 3</li> -->
+        </ul>
+        <script src="main.js"></script>
     </div>
   </div>
 </body>
